Fixed visibility of navlinks in dark mode

--- a/src/darkTheme.css
+++ b/src/darkTheme.css
@@ -7,11 +7,18 @@
     color:gold;
 }
 
+.dark a{
+    color:rgb(230, 223, 173)
+}
+
 .light {
     background-color: #fff;
     color: rgb(16, 14, 39);
 }
 
+.light a{
+   color:darkslateblue
+}
 .light a:hover{
     color:midnightblue;
 }
